Fixed minor spacing issue, and removed test projects for the moment

--- a/src/components/webpage.module.css
+++ b/src/components/webpage.module.css
@@ -88,6 +88,8 @@
 
 .text-left {
     padding: 5px;
+    margin-top: 15px;
+    text-align: left;
 }
 
 .text-title {
